--- a/src/styles/utilities/_color-utilities.scss
+++ b/src/styles/utilities/_color-utilities.scss
@@ -4,15 +4,15 @@
   @each $color, $value in $shade {
     @each $theme, $x in $value {
       .theme-#{$theme} .text-#{$group}-#{$color} {
-        color: var(--clr-#{$group}-#{$color}-#{$theme}) !important;
+        color: var(--clr-#{$group}-#{$color}-#{$theme});
       }
 
       .theme-#{$theme} .bg-#{$group}-#{$color} {
-        background-color: var(--clr-#{$group}-#{$color}-#{$theme}) !important;
+        background-color: var(--clr-#{$group}-#{$color}-#{$theme});
       }
 
       .theme-#{$theme} .shadow-#{$group}-#{$color} {
-        box-shadow: inset 0 -5px 0 0 var(--clr-#{$group}-#{$color}-#{$theme}) !important;
+        box-shadow: inset 0 -5px 0 0 var(--clr-#{$group}-#{$color}-#{$theme});
       }
     }
   }
